Fix some padding and height values so no overflow happens in the app (no scroll bars) yay!

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   background: #000;
   color: #fff;
+  overflow-x: hidden;
 }
